Improve Docker and Development Documentation
- Remove platform-specific ARM64 constraints in docker-compose.dev.yml
- Enhance Nginx configuration with improved proxy and HMR settings
- Update documentation for development setup and Docker deployment
- Add new Docker development documentation page
- Refactor getting started guide with clearer development instructions

--- a/docs/contributing/getting-started.mdx
+++ b/docs/contributing/getting-started.mdx
@@ -1,7 +1,24 @@
 ---
-title: "Getting Started with Contributing"
-description: "Learn how to contribute to OpnForm"
+title: Getting Started
+description: Learn how to contribute to OpnForm
 ---
+
+## Development Setup
+
+### Docker Setup (Recommended)
+
+The easiest way to get started with OpnForm development is to use our Docker-based development environment. It provides:
+- Hot-reload for both frontend and backend
+- All necessary services pre-configured
+- Consistent development environment across all platforms
+
+Follow our [Docker Development Setup](/deployment/docker-development) guide to get started.
+
+### Manual Setup
+
+If you prefer not to use Docker or need a custom setup, you can follow our [Local Deployment](/deployment/local-deployment#manual-setup) guide for manual installation instructions.
+
+## Contributing Guidelines
 
 Welcome to the OpnForm contributing guide! Here are some helpful links to get you started:
 
