--- a/docs/deployment/docker.mdx
+++ b/docs/deployment/docker.mdx
@@ -1,11 +1,15 @@
 ---
-title: "Docker"
-description: "OpnForm can be easily set up using Docker. We provide pre-built images on Docker Hub, which is the recommended method for most users."
+title: "Docker Deployment"
+description: "Deploy OpnForm using Docker"
 ---
 
 import CloudVersion from "/snippets/cloud-version.mdx";
 
 <CloudVersion/>
+
+<Tip>
+This guide is for deploying OpnForm on a production server. If you're looking to **develop OpnForm locally**, check out our [Docker Development Setup](/deployment/docker-development) guide which provides **hot-reload and other development features**.
+</Tip>
 
 ## Prerequisites
 
