--- a/docs/deployment/local-deployment.mdx
+++ b/docs/deployment/local-deployment.mdx
@@ -7,6 +7,16 @@ import CloudVersion from "/snippets/cloud-version.mdx";
 
 <CloudVersion/>
 
+## Docker Development Setup (Recommended)
+
+We recommend using our Docker-based development environment for the easiest setup experience. It provides hot-reload, debugging support, and all necessary services pre-configured.
+
+See our [Docker Development Setup](/deployment/docker-development) guide to get started with Docker.
+
+## Manual Setup
+
+If you prefer to set up OpnForm manually or can't use Docker, follow the instructions below.
+
 ## Requirements
 
 Before proceeding with the local deployment, ensure you have the following prerequisites installed on your system:
