Add configuration option to hide official templates
Introduce a new environment variable and configuration option to allow users to hide official templates in the template gallery. This provides more flexibility for self-hosted instances of OpnForm.

--- a/docs/configuration/environment-variables.mdx
+++ b/docs/configuration/environment-variables.mdx
@@ -47,6 +47,7 @@ There are dedicated configuration pages available for more detailed setup instru
 | `TEMPLATE_EDITOR_EMAILS`     | Comma-separated list of template editor emails.  |
 | `EXTRA_PRO_USERS_EMAILS`     | Comma-separated list of extra pro user emails.   |
 | `MODERATOR_EMAILS`           | Comma-separated list of moderator email addresses. |
+| `SHOW_OFFICIAL_TEMPLATES`    | Set to `false` to hide official templates from OpnForm's template gallery (defaults to `true`). |
 
 
 ## Front-end Environment Variables
