Add Docker environment variables documentation
- Update environment-variables.mdx with Docker-specific environment variable guidance
- Add environment variable sections to docker-development.mdx and docker.mdx
- Provide instructions for updating environment variables in Docker containers
- Include a warning about properly recreating containers when changing environment variables

--- a/docs/deployment/docker-development.mdx
+++ b/docs/deployment/docker-development.mdx
@@ -184,3 +184,7 @@ If hot reload isn't working:
    ```bash
    docker compose -f docker-compose.dev.yml restart ui
    ```
+
+## Environment Variables
+
+For detailed information about environment variables and how to update them in Docker, see our [Environment Variables](/configuration/environment-variables#docker-environment-variables) documentation.
