--- a/docs/configuration/environment-variables.mdx
+++ b/docs/configuration/environment-variables.mdx
@@ -66,3 +66,27 @@ There are dedicated configuration pages available for more detailed setup instru
 import CloudVersion from "/snippets/cloud-version.mdx";
 
 <CloudVersion/>
+
+## Docker Environment Variables
+
+When running OpnForm with Docker, there are some important considerations for handling environment variables:
+
+### Updating Environment Variables
+
+When changing environment variables in your `.env` files, you need to recreate the containers for the changes to take effect. Simply restarting the containers is not sufficient as Docker only loads environment variables when containers are created.
+
+To apply new environment variable changes:
+
+```bash
+# For a specific service (e.g., ui)
+docker compose down ui
+docker compose up -d ui
+
+# For all services
+docker compose down
+docker compose up -d
+```
+
+<Warning>
+A simple `docker compose restart` will not reload environment variables from your `.env` files. You must use `down` and `up` commands to recreate the containers.
+</Warning>
