--- a/docs/deployment/docker.mdx
+++ b/docs/deployment/docker.mdx
@@ -135,6 +135,10 @@ services:
       - ./custom-nginx.conf:/etc/nginx/conf.d/default.conf
 ```
 
+## Environment Variables
+
+For detailed information about environment variables and how to update them in Docker, see our [Environment Variables](/configuration/environment-variables#docker-environment-variables) documentation.
+
 ## Maintenance
 
 ### Updates
