Enhance Payment Handling and User Experience in Forms
- Refactored `FormPaymentController` to improve handling of Stripe account retrieval, including better error messages for both editor preview and public forms.
- Updated `OAuthProviderController` to utilize caching for OAuth connection context, enhancing performance and user experience during account connections.
- Improved `PaymentInput.client.vue` to display a loading state and a preview message for users, guiding them to save the form for payment activation.
- Modified various components to standardize payment-related messages and improve localization support across multiple languages.
- Removed the deprecated `connections.vue` page to streamline the codebase.

These changes aim to enhance the overall user experience when handling payments and improve the maintainability of the payment-related components.

--- a/client/i18n/lang/de.json
+++ b/client/i18n/lang/de.json
@@ -38,13 +38,14 @@
             "clear": "Löschen"
         },
         "barcodeInput": {
-            "clickToOpenCamera": "Klicken Sie, um eine Kamera zu öffnen"
+            "clickToOpenCamera": "Klicken Sie hier, um die Kamera zu öffnen"
         },
         "payment": {
-            "amount_to_pay": "Zahlungssumme",
+            "amount_to_pay": "Zu zahlender Betrag",
             "success": "Zahlung erfolgreich",
-            "name_on_card": "Name auf Karte",
-            "billing_email": "Rechnungse-Mail-Adresse"
-        }
+            "name_on_card": "Name auf der Karte",
+            "billing_email": "Rechnungs-E-Mail-Adresse"
+        },
+        "payment_disclaimer": "Your credit card will be charged upon clicking this button. Payments are securely processed through Stripe."
     }
 } 
