--- a/client/i18n/lang/fr.json
+++ b/client/i18n/lang/fr.json
@@ -38,13 +38,14 @@
             "clear": "Effacer"
         },
         "barcodeInput": {
-            "clickToOpenCamera": "Cliquez pour ouvrir une caméra"
+            "clickToOpenCamera": "Cliquez pour ouvrir la caméra"
         },
         "payment": {
             "amount_to_pay": "Montant à payer",
             "success": "Paiement réussi",
             "name_on_card": "Nom sur la carte",
             "billing_email": "Adresse e-mail de facturation"
-        }
+        },
+        "payment_disclaimer": "Your credit card will be charged upon clicking this button. Payments are securely processed through Stripe."
     }
 }
